# simple_prompt

./: README.md  README_EN.md  config.yaml  hello.py  pyproject.toml
src/: backend.py  dispatcher.py  execuator.py  protocol.py  utils.py
src/backend/: __init__.py  base.py  exception.py  hook.py  openai_backend.py  registry.py  vllm_backend.py
src/execuator/: base.py  prompt_execuator.py
src/simple_prompt/: __init__.py  protocol.py
src/simple_prompt/backend/: __init__.py  base.py  exception.py  hook.py  openai_backend.py  registry.py  vllm_backend.py
src/simple_prompt/execuator/: __init__.py  base.py  decorator.py  prompt_dispatcher.py  prompt_execuator.py
